- Mejora de la interfaz IGenericService<CreateEdit, Get> para unificar la estructura CRUD de los servicios. - Adaptadas interfaces concretas (por ejemplo IProductoService, IReservaService) a la nueva arquitectura genérica. - Soporte para reservas con múltiples productos por solicitud. - Incorporación de DTOs de creación, edición y respuesta. - Refactorizados y corregidos los tests unitarios y de integración.